# amm-program-optimisation

./: README.md
anchor-amm/: Anchor.toml
anchor-amm/programs/anchor-amm/: Cargo.toml
anchor-amm/programs/anchor-amm/src/: errors.rs  lib.rs
anchor-amm/programs/anchor-amm/src/instructions/: deposit.rs  initialize.rs  mod.rs  swap.rs
anchor-amm/programs/anchor-amm/src/state/: config.rs
anchor-amm/tests/: anchor-amm.ts
native-amm/: Cargo.toml
native-amm/amm_macros/: Cargo.toml
native-amm/amm_macros/src/: lib.rs
native-amm/src/: deposit.rs  initialize.rs  instruction.rs  lib.rs  state.rs  swap.rs  utils.rs
native-amm/tests/: README.md  package.json
