cargo-features = ["edition2024"]

[package]
name = "native-amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.2.1"
amm_macros = { path = "amm_macros" }
bytemuck = { version = "1.22.0", features = ["derive", "const_zeroed"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }
